--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Email 1:</strong> <span>1 camila.durand@pucp.edu.pe</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email 1:</strong> <span>camila.durand@pucp.edu.pe</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Repository:</strong> <span>www.example.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Lima,Perú</span></li>
               </ul>
