--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <div class="skills container">
 
       <div class="section-title">
-        <h2>Skills</h2>
+        <h2>LANGUAGES</h2>
       </div>
 
       <div class="row skills-content">
