--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <header id="header">
     <div class="container">
 
-      <h1><a href="index.html">Camila Durand</a></h1>
+      <h1><a href="index.html">Camila Durand Effio</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       <h2>International Relations student </span> from Lima</h2>
@@ -370,20 +370,21 @@
 
       <div class="section-title">
         <h2>Resume</h2>
-        <p>Check My Resume</p>
+        <p>My Resume</p>
       </div>
 
       <div class="row">
         <div class="col-lg-6">
-          <h3 class="resume-title">Sumary</h3>
+          <h3 class="resume-title">Education</h3>
           <div class="resume-item pb-0">
-            <h4>Alice Barkley</h4>
-            <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-            <p>
-            <ul>
-              <li>Portland par 127,Orlando, FL</li>
-              <li>(123) 456-7891</li>
-              <li>alice.barkley@example.com</li>
+            <h4>Pontifical Catholic University of Perú</h4>
+            <p><em>Faculty of Social Sciences- Bachelor of International Relations in the top 10.</em></p>
+              <h5>2020 - Present</h5>
+            </ul>
+            </p>
+            <h4>College of Europe</h4>
+            <p><em> Young Leaders Programme 2022 online training</em></p>
+              <h5>November 2022</h5>
             </ul>
             </p>
           </div>
@@ -403,11 +404,11 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <h3 class="resume-title">Professional Experience</h3>
+          <h3 class="resume-title">Extracurricular Activities</h3>
           <div class="resume-item">
-            <h4>Senior graphic design specialist</h4>
-            <h5>2019 - Present</h5>
-            <p><em>Experion, New York, NY </em></p>
+            <h4>Enséñame volunteering</h4>
+             <p><em>Academic Adviser</em>
+            </p><h5>2020 - 2021</h5>
             <p>
             <ul>
               <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
@@ -418,9 +419,9 @@
             </p>
           </div>
           <div class="resume-item">
-            <h4>Graphic design specialist</h4>
+            <h4>52nd OAS General Assembly - 2022</h4>
+            <p><em>Collaborator in the logistics area</em></p>
             <h5>2017 - 2018</h5>
-            <p><em>Stepping Stone Advertising, New York, NY</em></p>
             <p>
             <ul>
               <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
