--- a/index.html
+++ b/index.html
@@ -382,6 +382,7 @@
               <h5>2020 - Present</h5>
             </ul>
             </p>
+         <div class="resume-item">
             <h4>College of Europe</h4>
             <p><em> Young Leaders Programme 2022 online training</em></p>
               <h5>November 2022</h5>
@@ -409,25 +410,34 @@
             <h4>Enséñame volunteering</h4>
              <p><em>Academic Adviser</em>
             </p><h5>2020 - 2021</h5>
-            <p>
-            <ul>
-              <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-              <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-              <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-              <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
             </ul>
             </p>
           </div>
           <div class="resume-item">
             <h4>52nd OAS General Assembly - 2022</h4>
             <p><em>Collaborator in the logistics area</em></p>
-            <h5>2017 - 2018</h5>
-            <p>
-            <ul>
-              <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-              <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-              <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-              <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+            <h5>October 2022</h5>
+            </ul>
+            </p>
+          </div>
+          <div class="resume-item">
+            <h4>Euromodel 2022</h4>
+            <p><em>Participant and winner of the first Euromodel in Peru co-organized between UPC and PUCP under the leadership of the European Union (EU).</em></p>
+            <h5>October 2022</h5>
+            </ul>
+            </p>
+          </div>
+          <div class="resume-item">
+            <h4>Independent Students Delegation (ISD)</h4>
+            <p><em>Logistics Director and Faculty Advisor of ISD, Model of United Nations high school team, accredited by MINEDU</em></p>
+            <h5>2020 - 2022</h5>
+            </ul>
+            </p>
+          </div>
+          <div class="resume-item">
+            <h4>Board of directors of PUCP student federation (FEPUC)</h4>
+            <p><em>Student representative in the area of social responsibility and sustainable development</em></p>
+            <h5>2021 - 2022</h5>
             </ul>
             </p>
           </div>
