--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
               <h5>2020 - Present</h5>
             </ul>
             </p>
-         <div class="resume-item">
+          <div class="resume-item pb-0">
             <h4>College of Europe</h4>
             <p><em> Young Leaders Programme 2022 online training</em></p>
               <h5>November 2022</h5>
