--- a/index.html
+++ b/index.html
@@ -367,25 +367,23 @@
   <!-- ======= Resume Section ======= -->
   <section id="resume" class="resume">
     <div class="container">
-
+   
       <div class="section-title">
         <h2>Resume</h2>
         <p>My Resume</p>
       </div>
 
-      <div class="row">
+    <div class="row">
         <div class="col-lg-6">
           <h3 class="resume-title">Education</h3>
           <div class="resume-item pb-0">
-            <h4>Pontifical Catholic University of Perú</h4>
+            <h4>PONTIFICAL CATHOLIC UNIVERSITY OF PERÚ</h4>
             <p><em>Faculty of Social Sciences- Bachelor of International Relations in the top 10.</em></p>
-              <h5>2020 - Present</h5>
-            </ul>
-            </p>
-          <div class="resume-item pb-0">
-            <h4>College of Europe</h4>
-            <p><em> Young Leaders Programme 2022 online training</em></p>
-              <h5>November 2022</h5>
+            </div>
+          <div class="resume-item">
+            <h4>COLLEGE OF EUROPE</h4>
+            <p><em>Young Leaders Programme 2022 online training</em></p>
+            <h5>November 2022</h5>
             </ul>
             </p>
           </div>
@@ -407,37 +405,37 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Extracurricular Activities</h3>
           <div class="resume-item">
-            <h4>Enséñame volunteering</h4>
-             <p><em>Academic Adviser</em>
-            </p><h5>2020 - 2021</h5>
+            <h4>ENSÉÑAME VOLUNTEERING</h4>
+            <p><em>Academic Adviser </em></p>
+            <h5>2020 - 2021</h5>
             </ul>
             </p>
           </div>
           <div class="resume-item">
-            <h4>52nd OAS General Assembly - 2022</h4>
+            <h4>52ND OAS GENERAL ASSEMBLY - 2022</h4>
             <p><em>Collaborator in the logistics area</em></p>
             <h5>October 2022</h5>
             </ul>
             </p>
           </div>
           <div class="resume-item">
-            <h4>Euromodel 2022</h4>
+            <h4>EUROMODEL 2022</h4>
             <p><em>Participant and winner of the first Euromodel in Peru co-organized between UPC and PUCP under the leadership of the European Union (EU).</em></p>
             <h5>October 2022</h5>
             </ul>
             </p>
           </div>
           <div class="resume-item">
-            <h4>Independent Students Delegation (ISD)</h4>
-            <p><em>Logistics Director and Faculty Advisor of ISD, Model of United Nations high school team, accredited by MINEDU</em></p>
+            <h4>INDEPENDENT STUDENTS DELEGATION (ISD)</h4>
+            <p><em>Logistics Director and Faculty Advisor of ISD, Model of United Nations high school team, accredited by MINEDU.</em></p>
             <h5>2020 - 2022</h5>
-            </ul>
+           </ul>
             </p>
           </div>
           <div class="resume-item">
-            <h4>Board of directors of PUCP student federation (FEPUC)</h4>
-            <p><em>Student representative in the area of social responsibility and sustainable development</em></p>
-            <h5>2021 - 2022</h5>
+            <h4>BOARD OF DIRECTORS OF PUCP STUDENT FEDERATION (FEPUC)</h4>
+            <p><em>Student representative in the area of social responsibility and sustainable development.</em></p>
+            <h5>2021 - 2022</h5> 
             </ul>
             </p>
           </div>
@@ -446,6 +444,7 @@
 
     </div>
   </section><!-- End Resume Section -->
+      
 
   <!-- ======= Services Section ======= -->
   <section id="services" class="services">
