--- a/index.html
+++ b/index.html
@@ -388,26 +388,20 @@
             </p>
           </div>
 
-          <h3 class="resume-title">Education</h3>
+          <h3 class="resume-title">Experience</h3>
           <div class="resume-item">
-            <h4>Master of Fine Arts &amp; Graphic Design</h4>
-            <h5>2015 - 2016</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+            <h4>TELEPERFORMANCE</h4>
+            <h5>January- March 2022</h5>
+            <p><em>Bilingual agent</em></p>
           </div>
-          <div class="resume-item">
-            <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-            <h5>2010 - 2014</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
           </div>
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Extracurricular Activities</h3>
           <div class="resume-item">
-            <h4>ENSÉÑAME VOLUNTEERING</h4>
-            <p><em>Academic Adviser </em></p>
-            <h5>2020 - 2021</h5>
+            <h4>CIVIL ASSOCIATION INTERNACIA</h4>
+              <p><em>PUCPMUN Commission </em></p>
+            <h5>2022 - present</h5>
             </ul>
             </p>
           </div>
@@ -436,6 +430,13 @@
             <h4>BOARD OF DIRECTORS OF PUCP STUDENT FEDERATION (FEPUC)</h4>
             <p><em>Student representative in the area of social responsibility and sustainable development.</em></p>
             <h5>2021 - 2022</h5> 
+            </ul>
+            </p>
+          </div>
+            <div class="resume-item">
+            <h4>ENSÉÑAME VOLUNTEERING</h4>
+            <p><em>Academic Adviser </em></p>
+            <h5>2020 - 2021</h5>
             </ul>
             </p>
           </div>
