--- a/index.html
+++ b/index.html
@@ -378,6 +378,7 @@
           <h3 class="resume-title">Education</h3>
           <div class="resume-item pb-0">
             <h4>PONTIFICAL CATHOLIC UNIVERSITY OF PERÚ</h4>
+            <h5>2022 - present</h5>
             <p><em>Faculty of Social Sciences- Bachelor of International Relations in the top 10.</em></p>
             </div>
           <div class="resume-item">
