--- a/index.html
+++ b/index.html
@@ -394,6 +394,20 @@
             <h4>TELEPERFORMANCE</h4>
             <h5>January- March 2022</h5>
             <p><em>Bilingual agent</em></p>
+            </ul>
+            </p>
+          </div>
+
+          <h3 class="resume-title">Certificates</h3>
+          <div class="resume-item">
+            <h4>ADVANCED ENGLISH</h4>
+            <h5>2019</h5>
+            <p><em>British peruvian cultural Association</em></p>
+            </div>
+           <div class="resume-item">
+            <h4>INTERMEDIATE R</h4>
+            <p><em>Faculty of Social Sciences PUCP</em></p>
+            <h5>2022</h5>
              </div>
         </div>
         <div class="col-lg-6">
