--- a/index.html
+++ b/index.html
@@ -131,18 +131,19 @@
               <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
-          </div>
-         <div class="progress">
-            <span class="skill">ENGLISH <i class="val">100%</i></span>
+
+          <div class="progress">
+            <span class="skill">ENGLISH <i class="val">80%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
+          
+         </div>
+
+        <div class="col-lg-6">
    
-        </div>
-
-      </div>
-
+  
     </div><!-- End Skills -->
 
     <!-- ======= Interests ======= -->
