--- a/index.html
+++ b/index.html
@@ -537,7 +537,6 @@
             <div class="portfolio-info">
               <h4>MUN highschool team</h4>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -548,11 +547,10 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/migraciones.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Analisi migratorio 2022 </h4>
+              <h4>Migration analysis 2022 </h4>
               <p>En R</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="https://camiladurand.github.io/TRABAJO-GRUPAL-POL304/" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
