--- a/index.html
+++ b/index.html
@@ -420,19 +420,6 @@
             <div class="portfolio-info">
               <h4>Organization of sustainable entrepreneurship fair</h4> 
               <div class="portfolio-links">
-                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/consumo.jpeg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Event about responsible consumption</h4>
-              <div class="portfolio-links">
-                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -444,7 +431,17 @@
             <div class="portfolio-info">
               <h4>Educational Voluteering</h4>
               <div class="portfolio-links">
-                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/consumo.jpeg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Event about responsible consumption</h4>
+              <div class="portfolio-links">
               </div>
             </div>
           </div>
@@ -456,7 +453,6 @@
             <div class="portfolio-info">
               <h4>Event regarding disabilities and gender within the framework of 8M</h4>
               <div class="portfolio-links">
-                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -468,7 +464,6 @@
             <div class="portfolio-info">
               <h4>Indegenous people and their importance</h4>
               <div class="portfolio-links">
-                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -480,7 +475,6 @@
             <div class="portfolio-info">
               <h4>FEPUC</h4>
               <div class="portfolio-links">
-                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -492,7 +486,6 @@
             <div class="portfolio-info">
               <h4>Logistic area OAS</h4>
               <div class="portfolio-links">
-                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -504,7 +497,7 @@
             <div class="portfolio-info">
               <h4>Repository</h4>
               <div class="portfolio-links">
-                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Details"><i class="bx bx-link"></i></a>
+                <a href="https://beacons.ai/voluntariados_fepuc" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -516,7 +509,6 @@
             <div class="portfolio-info">
               <h4>Reflections on the internal armed conflict</h4>
               <div class="portfolio-links">
-                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
