--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="#" class="github"><i class="bi bi-github"></i></a>
+        <a href="https://github.com/CamilaDurand" class="github"><i class="bi bi-github"></i></a>
         <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
