--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
       <div class="section-title">
         <h2>Resume</h2>
         <p>My Resume</p>
-        <h5>view resume in spanish pdf</h5> 
-        <a href="https://drive.google.com/file/d/1jVTpOuKZtWLuQV03JL9MOzCtaiPsmqcs/view?usp=sharing" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Details"><i class="bx bx-link"></i></a> 
+        <h5>View resume in spanish pdf</h5> 
+        <a href="https://drive.google.com/file/d/1jVTpOuKZtWLuQV03JL9MOzCtaiPsmqcs/view" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Details"><i class="bx bx-link"></i></a> 
       </div>
 
     <div class="row">
