--- a/index.html
+++ b/index.html
@@ -236,9 +236,7 @@
       <div class="section-title">
         <h2>Resume</h2>
         <p>My Resume</p>
-        <a href="https://drive.google.com/file/d/1jVTpOuKZtWLuQV03JL9MOzCtaiPsmqcs/view" class="btn btn-info" role="button">View resume in spanish pdf</a>
-       
-        <a href="https://drive.google.com/file/d/1jVTpOuKZtWLuQV03JL9MOzCtaiPsmqcs/view" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Details"><i class="bx bx-link"></i></a> 
+        <a href="https://drive.google.com/file/d/1jVTpOuKZtWLuQV03JL9MOzCtaiPsmqcs/view" class="btn btn-success" role="button">View resume in spanish pdf</a>
       </div>
 
     <div class="row">
