--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <h1><a href="index.html">Camila Durand Effio</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
+      <!-- <a href="index.html" class="mr-auto"><img src="assets/img/fondow.png" alt="" class="img-fluid"></a> -->
       <h2>International Relations student </span> from Lima</h2>
 
       <nav id="navbar" class="navbar">
