--- a/index.html
+++ b/index.html
@@ -251,6 +251,11 @@
             <h4>COLLEGE OF EUROPE</h4>
             <p><em>Young Leaders Programme 2022 online training</em></p>
             <h5>November 2022</h5>
+           </div>
+          <div class="resume-item">
+            <h4>Yale University</h4>
+            <p><em>Moral foundations of politics provided by coursera</em></p>
+            <h5>2020</h5>
             </ul>
             </p>
           </div>
