--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/gira.png" rel="icon">
-  <link href="assets/img/gira.png" rel="apple-touch-icon">
+  <link href="assets/img/logo.png" rel="icon">
+  <link href="assets/img/logo.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -136,10 +136,6 @@
          </div>
 
         <div class="col-lg-6">
-          <div class="section-title">
-        <h2>Skills</h2>
-      </div>
-
       <div class="row skills-content">
 
          <div class="section-title">
@@ -147,9 +143,6 @@
       </div>
 
       <div class="row skills-content">
-
-        <div class="col-lg-6">
-
           <div class="progress">
             <span class="skill">HTML <i class="val">100%</i></span>
             <div class="progress-bar-wrap">
@@ -160,7 +153,7 @@
           <div class="progress">
             <span class="skill">R <i class="val">100%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           
@@ -174,7 +167,7 @@
           <div class="progress">
             <span class="skill">OFFICE <i class="val">100%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div> 
           
