--- a/index.html
+++ b/index.html
@@ -515,6 +515,19 @@
             </div>
           </div>
         </div>
+        
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/git.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Macroeconomics repository</h4>
+              <p>On github</p>
+              <div class="portfolio-links">
+                <a href="https://github.com/CamilaDurand/macroeconomia2022" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
 
       </div>
 
