--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
               <h4>Macroeconomics repository</h4>
               <p>On github</p>
               <div class="portfolio-links">
-                <a href="https://github.com/CamilaDurand/macroeconomia2022" class="bx bx-link" role="button">&</a>
+                <a href="https://github.com/CamilaDurand/macroeconomia2022" class="bx bx-link" role="button"> </a>
               </div>
             </div>
           </div>
